Changelog
=========

0.2 (unreleased)
----------------

- Nothing changed yet.


0.1 (2013-05-11)
----------------

- Feature #6: added support for TravisCI continuous integration
- Feature #5: introduced documentation
- Feature #4: imported HealthCheckLoader from django-doctor.
- Feature #3: introduced DistributionHealthCheck.
- Feature #2: introduced PredictableHealthCheck.
- Feature #1: imported HealthCheck from django-doctor.
- Initialized project